style2.css
body {
  background-color: black;
  padding-top: 50px;
}
/* navbar css */
.navbar-inverse {
  background-color: black;
}

.navbar {
  font-size: 18px;
}

.cursive {
  font: 400 30px/1 'Great Vibes', Helvetica, sans-serif;
}
#socialmedia {
    float: right;
}

#facebook {
  color: white;
  cursor: pointer;
  margin-top: 25%;

}
#facebook:hover {
  background-color: #0319c2;
/*ignore*/
}

#brand {
  color: white;
  pointer-events: none;
  cursor: default;
}

#brand2 {
  color: white;
  font-size: 26px;
  text-align: center;
}

/* the hero css */
#thehero {
  margin: 0% 10% 0% 10%;
  color: white;
  background-color: #212120;
  font-size: 22px;
  text-align: center;
  padding: 2% 5% 1% 5%;
  border: 1px solid black;
}

/* Hero image css */
#heroimage {
  border-radius: 10%;
  padding: 2% 2% 1% 5%;
}

/*the body css*/
#thebody {
  margin: 0% 10% 0% 10%;
  color: white;
  background-color: #161515;
  font-size: 22px;
  text-align: center;
  padding: 2% 5% 1% 5%;
  border: 1px solid black;
}

#thebody2 {
  margin: 0% 10% 0% 10%;
  color: white;
  background-color: #212120;
  font-size: 22px;
  text-align: center;
  padding: 2% 5% 1% 5%;
  border: 1px solid black;
}

.img-wrap {
  width: 300px;
  height: 200px;
  position: relative;
  display: inline-block;
  overflow: hidden;
  margin: 0;
}

div > a > img {
  display: block;
  position: absolute;
  top: 50%;
  left: 50%;
  min-height: 100%;
  min-width: 100%;
  transform: translate(-50%, -50%);
}
/* LIGHTBOX CSS */

